# codekata-template-python

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: python-test.yml
src/: game_of_life.py  kata.py
src/kata/: is_true.py
tests/: test_game_of_life.py  test_kata.py
